# type-stress

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Catch2.cmake
example/: CMakeLists.txt  example.cpp
stress/: CMakeLists.txt
stress/include/stress/: stress_reflection.hpp
stress/src/: stress_reflection.cpp
tests/: CMakeLists.txt  test_reflection.cpp
